[tool.poetry]
name = "androguard"
description = "Androguard is a full python tool to play with Android files."
authors = ["desnos <desnos@t0t0.fr>"]
version = "4.1.1"
license = "Apache Licence, Version 2.0"
readme = "README.md"
homepage = "https://github.com/androguard/androguard"

packages = [
    { include = "androguard" },
]

[tool.poetry.dependencies]
python = "^3.9"
pygments = ">=2.3.1"
lxml = ">=4.3.0"
colorama = ">=0.4.1"
asn1crypto = ">=0.24.0"
click = ">=7.0"
pydot = ">=1.4.1"
ipython = ">=5.0.0"
mutf8 = "*"
dataset = "*"
frida = "*"
loguru = "*"
apkInspector = ">=1.1.7"
matplotlib = "*"
networkx = "*"
PyQt5 = "*"
# address inconsistencies with pyqt5-qt5 binary release files
# > 5.15.2 exclusively contains releases for macosx
# 5.15.2 contains release for all, but not arm64 macosx
PyQt5-Qt5 = [
    {version = "*", markers = "sys_platform == 'darwin'"},
    {version = "5.15.2", markers = "sys_platform != 'darwin'"}
]
pyyaml = "*"
oscrypto = ">=1.3.0"
typing_extensions = "*"

[tool.setuptools.package_data]
"androguard.core.api_specific_resources" = ["aosp_permissions/*.json", "api_permission_mappings/*.json"]
"androguard.core.resources" = ["public.xml"]

[tool.poetry.scripts]
androguard = "androguard.cli.cli:entry_point"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
